# cpp-project-template

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  README_8md.html  cmake-format.yaml  dir_337d2c43f19e16ae86a9d18849d8efa3.html  dir_337d2c43f19e16ae86a9d18849d8efa3.js  dir_337d2c43f19e16ae86a9d18849d8efa3_dep.map  dir_337d2c43f19e16ae86a9d18849d8efa3_dep.md5  dir_4574e3d893027b2b7952aa86741bc9d5.html  dir_4574e3d893027b2b7952aa86741bc9d5.js  dir_4574e3d893027b2b7952aa86741bc9d5_dep.map  dir_4574e3d893027b2b7952aa86741bc9d5_dep.md5  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.js  dir_b7b05296667cfdea06f568d54c8cf9be.html  dir_b7b05296667cfdea06f568d54c8cf9be.js  dir_b7b05296667cfdea06f568d54c8cf9be_dep.map  dir_b7b05296667cfdea06f568d54c8cf9be_dep.md5  dir_d0a5d1df428c70fd6ddfa0ebbbe0c313.html  dir_d0a5d1df428c70fd6ddfa0ebbbe0c313.js  dir_d0a5d1df428c70fd6ddfa0ebbbe0c313_dep.map  dir_d0a5d1df428c70fd6ddfa0ebbbe0c313_dep.md5  dir_dcc56f625a73f05eeb8437bca0540897.html  dir_dcc56f625a73f05eeb8437bca0540897.js  dir_dcc56f625a73f05eeb8437bca0540897_dep.map  dir_dcc56f625a73f05eeb8437bca0540897_dep.md5  doxygen_crawl.html  files.html  flake.nix  goodbye_8hpp.html  goodbye_8hpp__incl.map  goodbye_8hpp__incl.md5  goodbye_8hpp_source.html  (+15 more)
cmake/: Ccache.cmake  CompilerCheck.cmake  Dependencies.cmake  Options.cmake  PackageHelpers.cmake  Sanitizers.cmake  StandardFlags.cmake  StaticAnalysis.cmake  TargetHelpers.cmake  TestHelpers.cmake
nix/: commonPackages.nix  mkCppShell.nix  systems.nix
source/engine/: CMakeLists.txt
source/engine/hello/: hello.hpp
(+24 files in other folders)
